<resources>
    <string name="app_name">Track Life Events</string>
    <string name="add_event_fab_desc">Add Event</string>
    <string name="save">Save</string>
    <string name="add_event_btn_desc">Adds an Event to the list</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="event_image">Event Image</string>
    <string name="days_left_d">%s days left</string>
    <string name="event_date">Event Date</string>
    <string name="select_image">Select Image</string>
    <string name="event_image_desc">Event Image Selected</string>
    <string name="empty_name_dialog">Please enter the name of the event</string>
    <string name="empty_image_dialog">Please select an image for your event</string>
    <string name="empty_date_dialog">Please select a date for your event</string>
</resources>